--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,6 +1,7 @@
 [pkg_prepare]
 ccs_flatten = /usr/libexec/clufter/ccs_flatten
 editor = nano
+extplugins_shared = /usr/share/clufter/ext-plugins
 shell_posix = /bin/sh
 shell_bashlike = /bin/bash
 hashalgo = md5
