els-ASAP auto commit file/tag clufter-0.76.0-1.el7.src.rpm

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,6 +1,9 @@
 [pkg_prepare]
 ccs_flatten = /usr/libexec/clufter/ccs_flatten
 editor = nano
+extplugins_shared = /usr/share/clufter/ext-plugins
+shell_posix = /bin/sh
+shell_bashlike = /bin/bash
 hashalgo = md5
 ra_metadata_dir = /usr/share/cluster
 ra_metadata_ext = metadata
